--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -10,6 +10,46 @@
       position: relative;
       display: flex;
       align-items: center;
+      &__icon {
+        padding-bottom: 10px;
+        margin-right: 30px;
+        border-radius: 4px;
+        a{
+          width: 140px;
+          display: block;
+          img {
+            width: 100%;
+            vertical-align: bottom;
+          }
+        }
+      }
+      &__searchBox {
+        margin-left: auto;
+        width: 100%;
+        form {
+          width: 100%;
+          display: flex;
+          margin-bottom: 5px;
+          .searchBox__input {
+            height: 36px;
+            width: calc(100% - 26px);
+            padding: 0 0 0 5px;
+          }
+          button {
+            width: 36px;
+            border: 0;
+            cursor: pointer;
+            background-color: #3CCACE;
+            padding: 8px;
+            .searchBox__icon {
+              img {
+                width: 100%;
+                vertical-align: bottom;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
