--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -1,3 +1,11 @@
 %header.pcHeader
   .pcHeader__inner
     .pcHeader__inner__main
+      %h1.pcHeader__inner__main__icon
+        = link_to image_tag("logo.png"), "#" 
+      .pcHeader__inner__main__searchBox
+        = form_tag "#" do
+          = text_field_tag :keyword,'', class: "searchBox__input",placeholder: "キーワードから探す"
+          %button{type: "submit"}
+            .searchBox__icon
+              = image_tag "/assets/icon-search 1.png"
