--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -51,5 +51,85 @@
         }
       }
     }
+    &__nav {
+      font-size: 14px;
+      display: flex;
+      margin-bottom: 10px;
+      .listLeft__item--first {
+        text-decoration: none;
+        padding: 0;
+      }
+      &__left {
+        position: relative;
+        display: flex;
+        &__item {
+          display: flex;
+          line-height: 38px;
+          padding: 0 0 0 16px;
+          > a {
+            text-decoration: none;
+            color: black;
+            line-height: 32px;
+            background-position: center right;
+            background-repeat: no-repeat;
+            background-size: 18px;
+            padding-right: 30px;
+          }
+          .displayNone {
+            display: none;
+          }
+          .tree {
+            z-index: 2;
+            position: absolute;
+            background-color: #fff;
+            width: 240px;
+            top: 40px;
+            .categoryTree {
+              background-color: #fff;
+              display: flex;
+              flex-direction: column;
+              position: relative;
+              &__item {
+                > a{
+                  line-height: 40px;
+                  display: block;
+                  width: 240px;
+                  padding: 3px 8px 3px 5px;
+                  border-bottom: 1px solid #f8f8f8;
+                }
+              }
+              li {
+                position: relative;
+                > a {
+                  color: #333;
+                  text-decoration: none;
+                  line-height: 32px;
+                  background-position: center right;
+                  background-repeat: no-repeat;
+                  background-size: 18px;
+                  padding-right: 30px;
+                }
+              }
+            }
+          }
+        }
+      }
+      &__right {
+        margin-left: auto;
+        display: flex;
+        &__item {
+          color: black;
+          line-height: 38px;
+          padding: 0 0 0 16px;
+          > a{
+            display: flex;
+            align-items: center;
+            color: black;
+            text-decoration: none;
+            line-height: 32px;
+          }
+        }
+      }
+    }
   }
 }
