--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -66,7 +66,7 @@
           display: flex;
           line-height: 38px;
           padding: 0 0 0 16px;
-          > a {
+          a {
             text-decoration: none;
             color: black;
             line-height: 32px;
@@ -90,7 +90,7 @@
               flex-direction: column;
               position: relative;
               &__item {
-                > a{
+                a{
                   line-height: 40px;
                   display: block;
                   width: 240px;
@@ -100,7 +100,7 @@
               }
               li {
                 position: relative;
-                > a {
+                a {
                   color: #333;
                   text-decoration: none;
                   line-height: 32px;
