ヘッダー修正

--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -121,7 +121,7 @@
           color: black;
           line-height: 38px;
           padding: 0 0 0 16px;
-          > a{
+          a{
             display: flex;
             align-items: center;
             color: black;
