--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,1 +1,68 @@
-%h1 フォーム記述が必要
+-# = form_with model:@product, local: true do |f| 
+-#   = f.label :name, "商品名（必須）"
+-#   %br
+-#   = f.text_field :name 
+-#   %br
+-#   = f.label :introduce, "商品の説明（必須）"
+-#   %br
+-#   = f.text_area :introduce
+-#   %br
+-#   = f.label :price, "価格（必須）"
+-#   %br
+-#   = f.number_field :price 
+-#   %br
+-#   = f.label :kind, "カテゴリー（必須）"
+-#   %br
+-#   = f.text_field :kind
+-#   -# = f.collection_select :Kind, Kind.all, :id, :name, include_blank: “選択して下さい”
+-#   %br
+-#   = f.label :brand, "ブランド（任意）"
+-#   %br
+-#   = f.text_field :brand
+-#   %br
+-#   = f.label :condition, "商品の状態（必須）"
+-#   %br
+-#   = f.text_field :condition
+-#   %br
+-#   = f.label :postage, "配送料の負担（必須）"
+-#   %br
+-#   = f.text_field :postage
+-#   %br
+-#   = f.label :shipment, "発送までの日数（必須）"
+-#   %br
+-#   = f.text_field :shipment
+-#   %br
+-#   = f.label :shipping_area, "発送元の地域（必須）"
+-#   %br
+-#   = f.text_field :shipping_area
+-#   %br
+-#     = f.fields_for :images do |i|
+-#       = i.file_field :image
+-#       %br
+-#       -# = i.file_field :image
+-#       -# %br
+-#   = f.submit "出品する"
+
+= form_with model: @product, local: true do |f|
+  %table
+    %tbody
+      %tr
+        %th
+          -# = f.label :name, “商品名”
+          = f.label :name, "商品名（必須）"
+        %td
+          = f.text_field :name
+      %tr
+        %th
+          = f.label :introduce, "商品説明"
+        %td
+          = f.text_field :introduce
+      %tr
+        %th
+          = f.label :price, "価格"
+        %td
+          = f.text_field :price
+    = f.fields_for :images do |i|
+      = i.file_field :image
+  %br
+  = f.submit '登録'
