--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -1,132 +1,86 @@
-.pcHeader {
-  padding: 0 60px;
-  &__inner {
-    max-width: 1040px;
-    width: 100%;
-    min-height: 82px;
+header {
+  .Headfield {
+    height: 100px;
+    width: 73%;
     margin: 0 auto;
-    padding: 15px 0 0;
-    &__main {
+    padding-top: 15px;
+    &__Top{
       position: relative;
       display: flex;
-      align-items: center;
-      &__icon {
+      height: 50px;
+      &--logo {
         padding-bottom: 10px;
         margin-right: 30px;
-        border-radius: 4px;
-        a{
+        height: 50px;
+        width: 140px;
+        img{
+          height: 40px;
           width: 140px;
-          display: block;
-          img {
-            width: 100%;
-            vertical-align: bottom;
-          }
         }
       }
-      &__searchBox {
-        margin-left: auto;
+      &__Searchbox {
         width: 100%;
-        form {
-          width: 100%;
-          display: flex;
-          margin-bottom: 5px;
-          .searchBox__input {
-            height: 36px;
-            width: calc(100% - 26px);
-            padding: 0 0 0 5px;
-          }
-          button {
-            width: 36px;
-            border: 0;
-            cursor: pointer;
-            background-color: #3CCACE;
-            padding: 8px;
-            .searchBox__icon {
-              img {
-                width: 100%;
-                vertical-align: bottom;
-              }
-            }
+        margin-left: auto;
+        display: flex;
+        &--input {
+          height: 36px;
+          width: calc(100% - 26px);
+        }
+        &--icon {
+          width: 36px;
+          height: 40px;
+          background-color: #3CCACE;
+          position: relative;
+          .circle {
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: 10px;
+            left: 8px;
           }
         }
       }
     }
-    &__nav {
+    &__Bottom{
+      height: 32px;
       font-size: 14px;
       display: flex;
+      width: 100%;
       margin-bottom: 10px;
-      .listLeft__item--first {
-        text-decoration: none;
-        padding: 0;
-      }
       &__left {
-        position: relative;
+        height: 32px;
+        width: 50%;
         display: flex;
-        &__item {
-          display: flex;
-          line-height: 38px;
-          padding: 0 0 0 16px;
-          a {
+        line-height: 32px;
+        &__kind {
+          .category {
             text-decoration: none;
-            color: black;
-            line-height: 32px;
-            background-position: center right;
-            background-repeat: no-repeat;
-            background-size: 18px;
+            color: #333;
             padding-right: 30px;
+            height: 100%;
           }
-          .displayNone {
-            display: none;
-          }
-          .tree {
-            z-index: 2;
-            position: absolute;
-            background-color: #fff;
-            width: 240px;
-            top: 40px;
-            .categoryTree {
-              background-color: #fff;
-              display: flex;
-              flex-direction: column;
-              position: relative;
-              &__item {
-                a {
-                  line-height: 40px;
-                  display: block;
-                  width: 240px;
-                  padding: 3px 8px 3px 5px;
-                  border-bottom: 1px solid #f8f8f8;
-                }
-              }
-              li {
-                position: relative;
-                a {
-                  color: #333;
-                  text-decoration: none;
-                  line-height: 32px;
-                  background-position: center right;
-                  background-repeat: no-repeat;
-                  background-size: 18px;
-                  padding-right: 30px;
-                }
-              }
-            }
+          .brand {
+            text-decoration: none;
+            color: #333;
+            padding-right: 30px;
           }
         }
       }
       &__right {
-        margin-left: auto;
+        height: 32px;
+        width: 50%;
         display: flex;
-        &__item {
-          color: black;
-          line-height: 38px;
-          padding: 0 0 0 16px;
-          a {
-            display: flex;
-            align-items: center;
-            color: black;
+        justify-content: flex-end;
+        line-height: 32px;
+        &__menu {
+          .login {
             text-decoration: none;
-            line-height: 32px;
+            color: #333;
+          }
+          .new {
+            text-decoration: none;
+            color: #333;
+            padding-left: 20px;
           }
         }
       }
