--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,72 +1,44 @@
 = form_with model:@product, local: true do |f| 
   = f.label :name, "商品名（必須）"
-  %br
+  %br/
   = f.text_field :name 
-  %br
+  %br/
   = f.label :introduce, "商品の説明（必須）"
-  %br
+  %br/
   = f.text_area :introduce
-  %br
+  %br/
   = f.label :price, "価格（必須）"
-  %br
+  %br/
   = f.number_field :price 
-  %br
+  %br/
   = f.label :kind_id, "カテゴリー（必須）"
-  %br
-  -# = f.text_field :kind
+  %br/
   = f.collection_select :kind_id, Kind.all, :id, :name, include_blank: "選択して下さい"
-  %br
+  %br/
   = f.label :brand_id, "ブランド（任意）"
-  %br
+  %br/
   = f.collection_select :brand_id, Brand.all, :id, :name, include_blank: "選択して下さい"
-
-  %br
+  %br/
   = f.label :condition_id, "商品の状態（必須）"
-  %br
+  %br/
   = f.collection_select :condition_id, Condition.all, :id, :name, include_blank: "選択して下さい"
-
-  %br
+  %br/
   = f.label :postage_id, "配送料の負担（必須）"
-  %br
+  %br/
   = f.collection_select :postage_id, Postage.all, :id, :name, include_blank: "選択して下さい"
-
-  %br
+  %br/
   = f.label :shipment_id, "発送までの日数（必須）"
-  %br
+  %br/
   = f.collection_select :shipment_id, Shipment.all, :id, :name, include_blank: "選択して下さい"
-
-  %br
+  %br/
   = f.label :prefecture_id, "発送元の地域（必須）"
-  %br
+  %br/
   = f.collection_select :prefecture_id, Prefecture.all, :id, :name, include_blank: "選択して下さい"
-  %br
-    = f.fields_for :images do |i|
-      = i.file_field :image
-      %br
-      -# = i.file_field :image
-      -# %br
+  %br/
+  #image-box
+    = f.fields_for :images do |image|
+      .js-file_group{"data-index" => "#{image.index}"}
+      = image.file_field :image, class: 'js-file'
+      %br/
+      .js-remove 削除
   = f.submit "出品する"
-
--# = form_with model: @product, local: true do |f|
--#   %table
--#     %tbody
--#       %tr
--#         %th
--#           -# = f.label :name, “商品名”
--#           = f.label :name, "商品名（必須）"
--#         %td
--#           = f.text_field :name
--#       %tr
--#         %th
--#           = f.label :introduce, "商品説明"
--#         %td
--#           = f.text_field :introduce
--#       %tr
--#         %th
--#           = f.label :price, "価格"
--#         %td
--#           = f.text_field :price
--#     = f.fields_for :images do |i|
--#       = i.file_field :image
--#   %br
--#   = f.submit '登録'
