--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -4,4 +4,12 @@
       .mainPicture__content__title
         人生を変えるフリマアプリ
       .mainPicture__content__text
-        FURIMAはだれでもかんたんに出品・購入できるフリマアプリです
+        FURIMAはだれでもかんたんに出品・購入できる
+        %br
+        フリマアプリです
+  .mainIntroduce
+  .subPicture
+  .mainFeatures
+  .pickupCategory
+  .pickupCategory
+  .lastPicture
