--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,9 +52,9 @@
     = yield
 
     %footer
-      %ul.contents
-        %li.content
-          %h2.content__head FURIMAについて
+      .contents
+        .content
+          .content__top FURIMAについて
           %ul
             %li
               %a{:href => "#"} 会社概要（運営会社）
@@ -65,14 +65,14 @@
             %li
               %a{:href => "#"} ポイントに関する特約
         %li.content
-          %h2.content__head FURIMAを見る
+          %h2.content__top FURIMAを見る
           %ul
             %li
               %a{:href => "#"} カテゴリー一覧
             %li
               %a{:href => "#"} ブランド一覧
         %li.content
-          %h2.content__head ヘルプ＆ガイド
+          %h2.content__top ヘルプ＆ガイド
           %ul
             %li
               %a{:href => "#"} FURIMAガイド
@@ -82,6 +82,6 @@
               %a{:href => "#"} お知らせ
       .footer__logo
         %a{:href => "/"}
-          %img{:src => "/assets/logo-white.png"}/
-      %p © FURIMA
+          %img{:src => "/assets/logo-white.png"}
+      © FURIMA
       %a{:href => "#"}
