--- a/app/assets/stylesheets/modules/footer.scss
+++ b/app/assets/stylesheets/modules/footer.scss
@@ -3,8 +3,6 @@ footer {
   color: #fff;
   background-color: #272727;
   text-align: center;
-  font-family: "Source Sans Pro", Helvetica, Arial, "游ゴシック体", "YuGothic",
-    "メイリオ", "Meiryo", sans-serif;
   .contents {
     max-width: 840px;
     margin: 0 auto;
@@ -12,12 +10,10 @@ footer {
     .content {
       display: flex;
       flex-direction: column;
-      width: calc(1 / 3 * 100%);
-      margin: 0 2% 0 0;
-      .content__head {
+      width: 33%;
+      .content__top {
         margin: 0 0 20px;
         font-size: 16px;
-        font-weight: bold;
       }
       ul {
         list-style: none;
@@ -36,28 +32,6 @@ footer {
     margin: 0 auto;
     img {
       width: 100%;
-      vertical-align: bottom;
-    }
-  }
-  .footer p {
-    font-size: 14px;
-    text-decoration: none;
-  }
-  .searchBtn {
-    width: 120px;
-    background: #3ccace;
-    text-align: center;
-    border-radius: 4%;
-    bottom: 32px;
-    right: 32px;
-    position: fixed;
-    padding: 15px;
-    .searchBtn__text {
-      color: #fff;
-      display: block;
-      font-size: 18px;
-      text-decoration: none;
-      margin-bottom: 5px;
     }
   }
 }
