--- a/app/assets/stylesheets/modules/main.scss
+++ b/app/assets/stylesheets/modules/main.scss
@@ -1,13 +1,12 @@
-body
+body{
   .mainPicture {
     height: 560px;
     width: 100%;
-    background-color: violet;
     padding: 0 60px;
     display: flex;
     background-image: url(bg-mainVisual-pict_pc.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: top center;
     &__content {
       width: 100%;
       margin: 0 auto;
@@ -17,11 +16,45 @@ body
         font-size: 60px;
         color: #fff;
         text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+        height: 144px;
       }
       &__text {
         font-size: 18px;
         color: #fff;
         text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+        margin: 16px;
+        height: 64px;
       }
     }
   }
+  .mainIntroduce {
+    padding: 60px 20px;
+    width: 100%;
+    height: 560px;
+    background-color: turquoise;
+  }
+  .subPicture {
+    height: 400px;
+    background-image: url(bg-topMiddleDl-pict.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+  .mainFeatures {
+    height: 730px;
+    padding: 60px 100px;
+    background-color: yellowgreen;
+  }
+  .pickupCategory {
+    padding: 80px 0 0;
+    height: 420px;
+    background-color: wheat;
+  }
+  .lastPicture {
+    padding: 100px 40px;
+    background-image: url(bg-appBanner-pict.jpg);
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    height: 360px;
+  }
+}
