サイドバー、部分テンプレート設定

--- a/app/views/mypage/card/new.html.haml
+++ b/app/views/mypage/card/new.html.haml
@@ -1,1 +1,7 @@
-%h1 MyPage/card#new
+%h1.HeaderField Header 実装エリア
+
+.MyPage
+  = render "items/sidebar"
+
+  .MyPage__MainField
+    %h1 MyPage/card#new
