--- a/app/views/mypage/address/index.html.haml
+++ b/app/views/mypage/address/index.html.haml
@@ -1,1 +1,7 @@
-%h1 MyPage/address#index
+%h1.HeaderField Header 実装エリア
+
+.MyPage
+  = render "items/sidebar"
+
+  .MyPage__MainField
+    %h1 MyPage/address#index
