--- a/app/views/mypage/favorites/index.html.haml
+++ b/app/views/mypage/favorites/index.html.haml
@@ -1,1 +1,7 @@
-%h1 Mypage/favorites#index
+%h1.HeaderField Header 実装エリア
+
+.MyPage
+  = render "items/sidebar"
+
+  .MyPage__MainField
+    %h1 Mypage/favorites#index
