--- a/app/views/items/_sidebar.html.haml
+++ b/app/views/items/_sidebar.html.haml
@@ -22,7 +22,7 @@
         %li ユーザー情報編集
       = link_to "#", id: '', class: 'no-underline' do
         %li 発送元・お届け先住所編集
-      = link_to mypage_card_index_path, id: '', class: 'no-underline' do
+      = link_to mypage_cards_path, id: '', class: 'no-underline' do
         %li クレジットカード情報
       = link_to mypage_logout_path, id: '', class: 'no-underline' do
         %li ログアウト
