--- a/app/views/mypage/cards/index.html.haml
+++ b/app/views/mypage/cards/index.html.haml
@@ -4,4 +4,9 @@
   = render "items/sidebar"
 
   .MyPage__MainField
-    %h1 MyPage/card#index
+    .MyPage__MainField__Title
+      クレジットカード情報
+      %hr
+    .BodyCard
+      .BodyCard--btn
+        = link_to "クレジットカードを追加する", new_mypage_card_path, class: 'Button'
