リンク先、ビューファイル仮設定

--- a/app/views/mypage/destination/edit.html.haml
+++ b/app/views/mypage/destination/edit.html.haml
@@ -4,4 +4,6 @@
   = render "items/sidebar"
 
   .MyPage__MainField
-    %h1 MyPage/address#edit
+    .MyPage__MainField__Title
+      配送元・お届け先住所変更
+      %hr
