--- a/app/views/mypage/favorites/index.html.haml
+++ b/app/views/mypage/favorites/index.html.haml
@@ -4,4 +4,6 @@
   = render "items/sidebar"
 
   .MyPage__MainField
-    %h1 Mypage/favorites#index
+    .MyPage__MainField__Title
+      お気に入り一覧
+      %hr
