--- a/app/views/mypage/listings/index.html.haml
+++ b/app/views/mypage/listings/index.html.haml
@@ -4,4 +4,6 @@
   = render "items/sidebar"
 
   .MyPage__MainField
-    %h1 Mypage/listingss#index
+    .MyPage__MainField__Title
+      出品商品情報
+      %hr
