--- a/app/views/mypage/users/edit.html.haml
+++ b/app/views/mypage/users/edit.html.haml
@@ -4,4 +4,6 @@
   = render "items/sidebar"
 
   .MyPage__MainField
-    %h1 MyPage/Users#edit
+    .MyPage__MainField__Title
+      ユーザー情報編集
+      %hr
