--- a/app/views/items/_sidebar.html.haml
+++ b/app/views/items/_sidebar.html.haml
@@ -8,11 +8,9 @@
       = link_to mypage_favorites_path, id: '', class: 'no-underline' do
         %li お気に入り
       = link_to mypage_listings_path, id: '', class: 'no-underline' do
-        %li 出品した商品-出品中
-      = link_to mypage_listings_path, id: '', class: 'no-underline' do
-        %li 出品した商品-取引中
-      = link_to mypage_listings_path, id: '', class: 'no-underline' do
-        %li 出品した商品-売却済み
+        %li 出品した商品
+      = link_to "#", id: '', class: 'no-underline' do
+        %li 購入した商品
 
   .MyPage__SideBar--title
     設定
