--- a/app/views/items/_sidebar.html.haml
+++ b/app/views/items/_sidebar.html.haml
@@ -3,7 +3,7 @@
     %ul.SidebarMenu
       = link_to mypage_path, id: '', class: 'no-underline' do
         %li マイページ
-      = link_to "#", id: '', class: 'no-underline' do
+      = link_to mypage_info_path, id: '', class: 'no-underline' do
         %li お知らせ
       = link_to mypage_favorites_path, id: '', class: 'no-underline' do
         %li お気に入り
