--- a/app/assets/stylesheets/modules/listing.scss
+++ b/app/assets/stylesheets/modules/listing.scss
@@ -1,10 +1,6 @@
 .ListingMenu{
   ul.ListingMenu__Tab{
     display: flex;
-    justify-content: space-around;
-    &--link{
-
-    }
     .menu_item{
       font-size: 20px;
       text-align: center;
@@ -12,7 +8,7 @@
       background-color: rgb(238, 235, 235);
       color: black;
       display: inline-block;
-      width: 229px;
+      width: 100%;
     }
     .active{
       border-top: solid 3px rgb(165, 3, 3);
