--- a/app/views/items/_sidebar.html.haml
+++ b/app/views/items/_sidebar.html.haml
@@ -9,7 +9,7 @@
         %li お気に入り
       = link_to mypage_listings_path, id: '', class: 'no-underline' do
         %li 出品した商品
-      = link_to "#", id: '', class: 'no-underline' do
+      = link_to mypage_purchasers_path, id: '', class: 'no-underline' do
         %li 購入した商品
 
   .MyPage__SideBar--title
