--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -11,5 +11,20 @@
   .subPicture
   .mainFeatures
   .pickupCategory
+    .pickupCategory__top
+      ピックアップブランド
+      .pickupCategory__top__title
+        新規投稿商品
+        .pickupCategory__top__title__products
+          .pickupCategory__top__title__products__left
+          .pickupCategory__top__title__products__middleLeft
+          .pickupCategory__top__title__products__middleRight
+          .pickupCategory__top__title__products__right
+        .pickupCategory__top__title__textField
   .pickupCategory
+    .pickupCategory__top
+      ピックアップブランド
+      .pickupCategory__top__title
+        アーカイバ
+        .pickupCategory__top__title__products
   .lastPicture
