--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,30 +1,137 @@
 %body
-  .mainPicture
-    .mainPicture__content
-      .mainPicture__content__title
+  .MainPicture
+    .MainPicture__Content
+      .MainPicture__Content__Title
         人生を変えるフリマアプリ
-      .mainPicture__content__text
+      .MainPicture__Content__Text
         FURIMAはだれでもかんたんに出品・購入できる
         %br
         フリマアプリです
-  .mainIntroduce
-  .subPicture
-  .mainFeatures
-  .pickupCategory
-    .pickupCategory__top
+  .MainIntroduce
+  .SubPicture
+  .MainFeatures
+  .PickupCategory
+    .PickupCategory__Top
+      ピックアップカテゴリー
+    .PickupCategory__Title
+      新規投稿商品
+    .PickupCategory__Products
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('IMG_9072.jpeg'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product1
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              10000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a007.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product2
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              20000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a004.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product3
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              30000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a001.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product4
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              40000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+  .PickupCategory
+    .PickupCategory__Top
       ピックアップブランド
-      .pickupCategory__top__title
-        新規投稿商品
-        .pickupCategory__top__title__products
-          .pickupCategory__top__title__products__left
-          .pickupCategory__top__title__products__middleLeft
-          .pickupCategory__top__title__products__middleRight
-          .pickupCategory__top__title__products__right
-        .pickupCategory__top__title__textField
-  .pickupCategory
-    .pickupCategory__top
-      ピックアップブランド
-      .pickupCategory__top__title
-        アーカイバ
-        .pickupCategory__top__title__products
-  .lastPicture
+    .PickupCategory__Title
+      アーカイバ
+    .PickupCategory__Products
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('IMG_9072.jpeg'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product1
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              10000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a007.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product2
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              20000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a004.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product3
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              30000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+      .ProductBox
+        .ProductBox__Image
+          = image_tag ('a001.png'), class: "product_image"
+        .ProductBox__Info
+          .ProductBox__Info__Name
+            product4
+          .ProductBox__Info__Ele
+            .ProductBox__Info__Ele__Price
+              40000円
+            .ProductBox__Info__Ele__Favorite
+              %i.fa.fa-star.likeIcon
+              0
+          .ProductBox__Info__Tax
+            (税込)
+  .LastPicture
