--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,40 +48,51 @@
               = link_to "ログイン", "#", class: "login"
             .Headfield__Bottom__right__menu
               = link_to "新規会員登録", "#", class: "new"
+              
+    
 
     = yield
 
     %footer
-      .contents
-        .content
-          .content__top FURIMAについて
-          %ul
-            %li
-              %a{:href => "#"} 会社概要（運営会社）
-            %li
-              %a{:href => "#"} プライバシーポリシー
-            %li
-              %a{:href => "#"} FURIMA利用規約
-            %li
-              %a{:href => "#"} ポイントに関する特約
-        %li.content
-          %h2.content__top FURIMAを見る
-          %ul
-            %li
-              %a{:href => "#"} カテゴリー一覧
-            %li
-              %a{:href => "#"} ブランド一覧
-        %li.content
-          %h2.content__top ヘルプ＆ガイド
-          %ul
-            %li
-              %a{:href => "#"} FURIMAガイド
-            %li
-              %a{:href => "#"} FURIMAロゴ利用ガイドライン
-            %li
-              %a{:href => "#"} お知らせ
-      .footer__logo
-        %a{:href => "/"}
-          %img{:src => "/assets/logo-white.png"}
-      © FURIMA
-      %a{:href => "#"}
+      .Footer__TOP
+        .Footer__TOP__Title
+          だれでもかんたん、人生を変えるフリマアプリ
+        .Footer__TOP__Text
+          今すぐ無料ダウンロード！
+        .Footer__TOP__Icon
+          = image_tag ('app-store.svg'), class: "app_image"
+          = image_tag ('google-play.svg'), class: "app_image"
+      .Footer__Bottom
+        .contents
+          .content
+            .content__top FURIMAについて
+            %ul
+              %li
+                %a{:href => "#"} 会社概要（運営会社）
+              %li
+                %a{:href => "#"} プライバシーポリシー
+              %li
+                %a{:href => "#"} FURIMA利用規約
+              %li
+                %a{:href => "#"} ポイントに関する特約
+          %li.content
+            %h2.content__top FURIMAを見る
+            %ul
+              %li
+                %a{:href => "#"} カテゴリー一覧
+              %li
+                %a{:href => "#"} ブランド一覧
+          %li.content
+            %h2.content__top ヘルプ＆ガイド
+            %ul
+              %li
+                %a{:href => "#"} FURIMAガイド
+              %li
+                %a{:href => "#"} FURIMAロゴ利用ガイドライン
+              %li
+                %a{:href => "#"} お知らせ
+        .footer__logo
+          %a{:href => "/"}
+            %img{:src => "/assets/logo-white.png"}
+        © FURIMA
+        %a{:href => "#"}
