--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -41,7 +41,7 @@
     .SubPicture__Text
       FURIMAは、フリマアプリで最も人気。
       %br出品・購入回数も業界最多です！
-      %brほしかったあの商品に出会えるかもしれない
+      ほしかったあの商品に出会えるかもしれない
     .SubPicture__Icon
       = image_tag ('app-store.svg'), class: "app_image"
       = image_tag ('google-play.svg'), class: "app_image"
