--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -87,3 +87,28 @@ header {
     }
   }
 }
+.FloatBtn {
+  position: relative;
+  height: 112px;
+  width: 120px;
+  position: fixed;
+  right: 32px;
+  bottom: 32px;
+  background-color: #3CCACE;
+  z-index: 10;
+  border-radius: 6%;
+  &__Text {
+    font-size: 18px;
+    text-align: center;
+    color: #fff;
+    margin-top: 15px;
+  }
+  .float_image {
+    padding: 15px;
+    text-align: center;
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    margin-left: 25px;
+  }
+}
