--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,91 +8,94 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application'
     -# = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-  %body
-    %header
-      .Headfield
-        .Headfield__Top
-          .Headfield__Top--logo
-            = link_to image_tag("logo.png"), "#" 
-          .Headfield__Top__Searchbox
-            = text_field :keyword,'', class: "Headfield__Top__Searchbox--input",placeholder: "キーワードから探す"
-            .Headfield__Top__Searchbox--icon
-              = image_tag "icon-search 1.png", class: "circle"
-        .Headfield__Bottom
-          .Headfield__Bottom__left
-            .Headfield__Bottom__left__kind
-              = link_to "カテゴリー", "#", class: "category"
-              -# .tree.displayNone
-              -#   %ul.categoryTree
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li レディース
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li メンズ
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li ベビー・キッズ
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li インテリア・住まい・小物
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li ベビー・キッズ
-              -#     = link_to "#", class: "categoryTree__item" do
-              -#       %li おもちゃ・ホビー・グッズ
-            .Headfield__Bottom__left__kind
-              = link_to "ブランド", "#", class: "brand"
-          .Headfield__Bottom__right
-            -# # //devise機能実装後外してください
-            -# - if user_signed_in?
-            -#   .Headfield__Bottom__right__menu
-            -#     = link_to "ログアウト", "#"
-            -# - else
-            .Headfield__Bottom__right__menu
-              = link_to "ログイン", "#", class: "login"
-            .Headfield__Bottom__right__menu
-              = link_to "新規会員登録", "#", class: "new"
-              
-    
 
+  %header
+    .Headfield
+      .Headfield__Top
+        .Headfield__Top--logo
+          = link_to image_tag("topimage/logo.png"), "#" 
+        .Headfield__Top__Searchbox
+          = text_field :keyword,'', class: "Headfield__Top__Searchbox--input",placeholder: "キーワードから探す"
+          .Headfield__Top__Searchbox--icon
+            = image_tag ("topimage/icon-search 1.png"), class: "circle"
+      .Headfield__Bottom
+        .Headfield__Bottom__left
+          .Headfield__Bottom__left__kind
+            = link_to "カテゴリー", "#", class: "category"
+            -# .tree.displayNone
+            -#   %ul.categoryTree
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li レディース
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li メンズ
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li ベビー・キッズ
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li インテリア・住まい・小物
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li ベビー・キッズ
+            -#     = link_to "#", class: "categoryTree__item" do
+            -#       %li おもちゃ・ホビー・グッズ
+          .Headfield__Bottom__left__kind
+            = link_to "ブランド", "#", class: "brand"
+        .Headfield__Bottom__right
+          -# # //devise機能実装後外してください
+          -# - if user_signed_in?
+          -#   .Headfield__Bottom__right__menu
+          -#     = link_to "ログアウト", "#"
+          -# - else
+          .Headfield__Bottom__right__menu
+            = link_to "ログイン", "#", class: "login"
+          .Headfield__Bottom__right__menu
+            = link_to "新規会員登録", "#", class: "new"
+  .FloatBtn
+    .FloatBtn__Text
+      出品する
+    = image_tag ('topimage/icon_camera.png'), class: "float_image"
+
+  %body
     = yield
 
-    %footer
-      .Footer__TOP
-        .Footer__TOP__Title
-          だれでもかんたん、人生を変えるフリマアプリ
-        .Footer__TOP__Text
-          今すぐ無料ダウンロード！
-        .Footer__TOP__Icon
-          = image_tag ('app-store.svg'), class: "app_image"
-          = image_tag ('google-play.svg'), class: "app_image"
-      .Footer__Bottom
-        .contents
-          .content
-            .content__top FURIMAについて
-            %ul
-              %li
-                %a{:href => "#"} 会社概要（運営会社）
-              %li
-                %a{:href => "#"} プライバシーポリシー
-              %li
-                %a{:href => "#"} FURIMA利用規約
-              %li
-                %a{:href => "#"} ポイントに関する特約
-          %li.content
-            %h2.content__top FURIMAを見る
-            %ul
-              %li
-                %a{:href => "#"} カテゴリー一覧
-              %li
-                %a{:href => "#"} ブランド一覧
-          %li.content
-            %h2.content__top ヘルプ＆ガイド
-            %ul
-              %li
-                %a{:href => "#"} FURIMAガイド
-              %li
-                %a{:href => "#"} FURIMAロゴ利用ガイドライン
-              %li
-                %a{:href => "#"} お知らせ
-        .footer__logo
-          %a{:href => "/"}
-            %img{:src => "/assets/logo-white.png"}
-        © FURIMA
-        %a{:href => "#"}
+  %footer
+    .Footer__TOP
+      .Footer__TOP__Title
+        だれでもかんたん、人生を変えるフリマアプリ
+      .Footer__TOP__Text
+        今すぐ無料ダウンロード！
+      .Footer__TOP__Icon
+        = image_tag ('topimage/app-store.svg'), class: "app_image"
+        = image_tag ('topimage/google-play.svg'), class: "app_image"
+    .Footer__Bottom
+      .contents
+        .content
+          .content__top FURIMAについて
+          %ul
+            %li
+              %a{:href => "#"} 会社概要（運営会社）
+            %li
+              %a{:href => "#"} プライバシーポリシー
+            %li
+              %a{:href => "#"} FURIMA利用規約
+            %li
+              %a{:href => "#"} ポイントに関する特約
+        %li.content
+          %h2.content__top FURIMAを見る
+          %ul
+            %li
+              %a{:href => "#"} カテゴリー一覧
+            %li
+              %a{:href => "#"} ブランド一覧
+        %li.content
+          %h2.content__top ヘルプ＆ガイド
+          %ul
+            %li
+              %a{:href => "#"} FURIMAガイド
+            %li
+              %a{:href => "#"} FURIMAロゴ利用ガイドライン
+            %li
+              %a{:href => "#"} お知らせ
+      .footer__logo
+        %a{:href => "/"}
+          %img{:src => "/assets/logo-white.png"}
+      © FURIMA
+      %a{:href => "#"}
