--- a/app/assets/stylesheets/modules/main.scss
+++ b/app/assets/stylesheets/modules/main.scss
@@ -37,15 +37,23 @@
   padding: 60px 20px;
   width: 100%;
   height: 560px;
+  position: relative;
   &__Title {
     font-size: 26px;
     text-align: center;
     margin-bottom: 25px;
     padding-bottom: 15px;
     font-weight: bold;
+    text-align: center;
+    &__Border {
+      width: 70px;
+      height: 4px;
+      position: absolute;
+      background-color: #3CCACE;
+      left: 47%;
+    }
   }
   &__Lists {
-    text-align: center;
     display: flex;
     width: 100%;
     max-width: 1020px;
@@ -55,23 +63,32 @@
       width: 30%;
       margin: 16px 5% 0 0;
       text-align: left;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      .list_image {
-        width: 300px;
-        height: 300px;
+      &__Box {
         position: relative;
-        // .number {
-        //   height: 20px;
-        //   width: 20px;
-        //   color: turquoise;
-        //   position: absolute;
-        // }
+        height: 300px;
+        &--img {
+          position: absolute;
+          .list_image {
+            width: 300px;
+            height: 300px;
+            padding-bottom: 20px;
+          }
+        }
+        &--num {
+          position: absolute;
+          background-color: #3CCACE;
+          border-radius: 6%;
+          font-size: 30px;
+          text-align: center;
+          padding: 10px 20px;
+          color: #fff;
+          margin-right: 5px;
+        }
       }
       &__Text {
         font-size: 24px;
         font-weight: bold;
+        text-align: center;
         .color {
           color: turquoise;
         }
@@ -119,6 +136,13 @@
     margin-bottom: 40px;
     font-weight: bold;
     padding-bottom: 15px;
+    &__Border {
+      width: 70px;
+      height: 4px;
+      position: absolute;
+      background-color: #3CCACE;
+      left: 47%;
+    }
   }
   &__Contents {
     display: flex;
